master
-ahodesuka
  Reply/Thread File Info Formatting:
    - Link: %l, %L (Original file names are shown inside threads).
    - Size: %B (Bytes), %K (KB), %M (MB), %s (4chan default).
    - Resolution/PDF: %r
    - Original filename: %n, %N.
- noface
  Update imagelimit for mlp.
  Fix stubs if poster has unique ID.

2.27.1
- Mayhem
  Fix stubs with the new filter.
  Fix mail filtering.
  The MD5 will now check for exact string matching, it will not use regular expressions.

2.27.0
- aeosynth / ahodesuka
  new option: expand images from current position
- ahodesuka
  Add Open Reply in New Tab option for replies made from the main board (not dumping).
  Scroll back up (top of anchor - 42px) when unexpanding images.
- Mayhem
  The Filter now has per filter settings:
    - Filter the OP only along its thread, replies only, or both.
    - Per boards, or global.
    - Highlight, or hide.
    - Highlighted OPs will have their threads put on top of the board page by default.
  New filter group: Image dimensions.
  Fix posting on Safari.
  Fix rare case where the QR would not accept certain image types.

2.26.4
- Mayhem
  Add /vg/ archive redirection.
  Update ban support with the QR.
  Fix history issues on Chrome.

2.26.3
- Mayhem
  Ensure fresh captcha on QR load.
  There is now a reply counter in the QR dump list.
  Fix unXXXifier on pages starting with not XXXed numbers.
  Update image limit indicator for /vg/.

2.26.2
- Mayhem
  New option to fix XXX'd post numbers.
  Fix post number quoting on /b/ and /v/.
  Update archive redirection for /v/.

2.26.1
- Mayhem
  You can now drag replies in the dump list to reorder them.
  Fix sauce links with spoiled thumbnails.

2.26.0
- desuwa
  New option: remember the size of the QR on Firefox.
- aeosynth
  prevent post form flicker
- Mayhem
  Load QR's iframe to sys.4chan.org faster, unless you use Greasemonkey. Thanks desuwa.
  Increase Sauce linking possibilites:
    Thumbnails, full images, MD5 hashes.